--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -1,8 +1,13 @@
 /* 全局样式表 */
+
 html,
 body,
 #app {
-  height: 100%;
-  margin: 0;
-  padding: 0;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+}
+
+.el-breadcrumb {
+    margin-bottom: 20px;
 }
