完成了权限功能开发

--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -3,6 +3,8 @@
 html,
 body,
 #app {
+    /* 解决三级权限换行问题 */
+    min-width: 1366px;
     height: 100%;
     margin: 0;
     padding: 0;
@@ -10,4 +12,9 @@ body,
 
 .el-breadcrumb {
     margin-bottom: 20px;
+}
+
+.vcenter {
+    display: flex;
+    align-items: center;
 }
